fixing alignment stuff on break screen

--- a/overlays/break.css
+++ b/overlays/break.css
@@ -82,6 +82,7 @@ body {
     font-size: 90px;
     font-weight: 600;
     line-height: .85em;
+    margin-left: 6px;
 }
 
 .bottom-wrapper {
